compiler/tests/fail/array_expansion/x86-64/array_return_not_reg.jazz
fn f () -> reg u64[4] {
  reg u64[4] r;

  inline int i;
  for i = 0 to 4 {
    r[i] = 0;
  }

  return r;
}

export fn main () -> reg u64 {
  stack u64[4] s;
  reg u64 res;

  s = f();
  res = s[0];

  return res;
}
